2006-08-09  Aaron Bockover  <abock@gnome.org>

	* banshee.mds:
	* libbanshee/libbanshee.mdp: Added MD project for libbanshee

	* libbanshee/gst-playback-0.10.c: Set video-sink on playbin to a fakesink
	to keep video windows from popping up (and often crashing the app with
	XLib errors)

2006-08-09  Aaron Bockover  <abock@gnome.org>

	* banshee.mds: Added Last.FM.mdp

	* src/Gnome.Keyring/*: synced sources

	* src/Last.FM/Makefile.am: Added new Last.FM files

	* src/Last.FM/Test.cs: Added test
	
	* src/Last.FM/Last.FM/Account.cs: Completed, moved to propery build layout

	* src/Last.FM/Last.FM.Gui/AccountLoginForm.cs: Login form that is 
	Last.FM.Account aware
	
	* src/Last.FM/Last.FM.Gui/AccountLoginDialog.cs: Dialog box embedding
	Last.FM.AccountLoginForm
	
	* src/Last.FM/Last.FM.Gui/Badge.cs: A linked image showing the last.fm
	logo/badge
	
	* src/Last.FM/Last.FM.Gui/LinkLabel.cs: A hyperlink button

	* src/Last.FM/*.png: Added last.fm badge images

2006-08-05  Aaron Bockover  <abock@gnome.org>

	* src/Gnome.Keyring/*: synced sources of gonzalo's Gnome.Keyring library
	from Mono SVN (gnome-keyring-sharp)

	* src/Last.FM/*: Beginning of general Last.FM/Audioscrobbler library

	* src/Last.FM/Account.cs: Class to get/set username/password for
	Last.FM using Gnome.Keyring

	* configure.ac:
	* src/Makefile.am: Added Gnome.Keyring, Last.FM

2006-08-05  Aaron Bockover  <abock@gnome.org>

	* banshee.mds:
	* src/banshee.mdp:
	* src/Banshee.Base/Banshee.Base.mdp: Updated MonoDevelop projects

	* src/Makefile.am: Do not build AmazonSearchService; has never been
	used 

	* src/AmazonSearchService.wsdl: Removed :-)

2006-08-05  Aaron Bockover  <abock@gnome.org>

	* src/*/Makefile.am:
	* src/*/*/Makefile.am: Added $(top_srcdir)/src/AssemblyInfo.cs to build

	* src/Banshee.Plugins/Daap/daap-sharp/AssemblyInfo.cs: Removed

	* src/Banshee.Plugins/Daap/daap-sharp/sync-tree.sh: Remove AssemblyInfo.cs
	when syncing

2006-08-05  Aaron Bockover  <abock@gnome.org>
