@@ -1,3 +1,9 @@
+2006-08-10  Ruben Vermeersch  <ruben@Lambda1.be>
+
+	* data/banshee.glade:
+	* src/TrackProperties.cs: Long overdue patch for BGO #327371 (window for
+	edit song metadata should be resizable).
+
 2006-08-09  Aaron Bockover  <abock@gnome.org>
 
 	* banshee.mds:
